--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node dist/main.js",
     "build": "npx tsc",
-    "clean": "rmdir /Q /S dist"
+    "clean": "rmdir /Q /S dist",
+    "lint": "eslint . --fix"
   },
   "author": "Victor Matthews",
   "dependencies": {
@@ -22,7 +23,10 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "chai": "^4.2.0",
+    "eslint": "^7.29.0",
     "mocha": "^5.2.0",
     "ts-mockito": "^2.3.1",
     "ts-node": "^8.0.3"
